# omniswim-suite

./: .gitignore  CHART_BLANK_HANDOFF.md  PHASE2_PROGRESS.md  PHASE3_PROGRESS.md  PHASE3_UI_PROGRESS.md  PHASE4_PLAN.md  README.md  Start-OmniSwim-Suite-Prod.bat  Start-OmniSwim-Suite.bat  package-lock.json  package.json  playwright.config.ts  tsconfig.base.json  vitest.config.ts
backend/: parse_meet.py  pdf_parser.py  psych_parser.py
data/: meets.json
omniswim-suite/: PHASE2_PROGRESS.md  PHASE3_PROGRESS.md  PHASE4_PLAN.md  README.md  Start-OmniSwim-Suite-Prod.bat  Start-OmniSwim-Suite.bat  package-lock.json  package.json  vitest.config.ts
omniswim_-biomechanics/: DEPRECATED.md  README.md  index.html  metadata.json  package-lock.json  package.json  server.ts
scripts/: chart_browser_diagnostic.mjs  clear-vite-cache.mjs  export-cutlines.mjs  free-port.mjs  migrate-json-to-postgres.mjs  migrate-json-to-sqlite.mjs  run-smoke-tests.bat  run-tests.mjs  test_athlete_history.mjs  test_chart_bundle.mjs  test_chart_data.mjs  test_chart_render.mjs  test_chart_shell.mjs  test_compact_event_label.mjs  test_entry_limits.mjs  test_individual_scoring.mjs  test_momentum_series.mjs  test_nsisc_psych.mjs  test_nsisc_team_totals.mjs  test_prelims_projection.mjs  test_psych_projection.mjs  test_relay_overrides.mjs  test_roster_optimizer.mjs  test_sqlite_roundtrip.mjs  test_team_aliases.mjs  test_team_colors.mjs  test_theme_css.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tests/: athleteHistory.test.ts  reportBuilder.test.ts  (+1 more)
(+61 files in other folders)
